Adding node-sass and multiple templates

--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -2,20 +2,12 @@
 <html lang="en-GB">
 	<head>
 		<meta charset="utf-8" />
-		<title>Welcome to my blog</title>
+		<title>{{ title }}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="./styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>Welcome to my blog</h1>
-		<ul>
-	
-		<li>
-			<h2><a href="/posts/blog-post/">Blog Post 1</a></h2>
-			<em>2019-05-06</em>
-		</li>
-	
-</ul>
-
+		<h1>{{ title }}</h1>
+		{{ content }}
 	</body>
 </html>
