--- a/index.liquid
+++ b/index.liquid
@@ -1,23 +1,12 @@
 ---
-title: 'My 11ty starter'
-images:
-  - 'clock.svg'
-  - 'credit-card.svg'
+layout: home.liquid
+title: Welcome to my blog
 ---
-<!DOCTYPE html>
-<html lang="en-GB">
-	<head>
-		<meta charset="utf-8" />
-		<title>{{ title }}</title>
-	</head>
-	<body>
-		<h1>{{ title }}</h1>
-		<ul>
-			{% for filename in images %}
-			<li>
-				<a href="images/{{ filename | url_encode }}">{{ filename }}</a>
-			</li>
-			{% endfor %}
-		</ul>
-	</body>
-</html>
+<ul>
+	{% for post in collections.posts %}
+		<li>
+			<h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
+			<em>{{ post.date | date: "%Y-%m-%d" }}</em>
+		</li>
+	{% endfor %}
+</ul>
